--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
-    "files.associations": {
-        "iostream": "cpp",
-        "stdexcept": "cpp",
-        "new": "cpp"
-    }
+  "files.associations": {
+    "iostream": "cpp",
+    "ostream": "cpp",
+    "functional": "cpp",
+    "stdexcept": "cpp"
+    "algorithm": "cpp"
+  },
+  "githubPullRequests.ignoredPullRequestBranches": ["main"]
 }
